--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
 
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="asset/css/main.css" />
   <script src="main.js"></script>
 </head>
 
@@ -56,7 +56,7 @@
     </div>
   </nav>
 
-  <!-- Comienzo carousel -->
+  <!-- Carousel -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -83,6 +83,53 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
+
+  <!-- Cards de testimonios -->
+  <div id="cards">
+    <p id="testimonios" style="font-size:5vw;">Testimonios</p>
+
+    <div class="card-group">
+      <div class="card">
+        <img class="card-img-top" src="asset/img/turist1.jpg" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis purus facilisis, gravida justo non, finibus
+            urna. Nullam vel orci sit amet odio aliquet laoreet vitae id eros.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="asset/img/turist2.jpg" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis purus facilisis, gravida justo non, finibus
+            urna. Nullam vel orci sit amet odio aliquet laoreet vitae id eros.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="asset/img/turist3.jpg" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis purus facilisis, gravida justo non, finibus
+            urna. Nullam vel orci sit amet odio aliquet laoreet vitae id eros.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contactanos -->
+  <form>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-group form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 
 
   <!-- links de bootstrap -->
