--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+    crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="asset/css/main.css" />
   <script src="main.js"></script>
 </head>
@@ -66,12 +67,21 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="asset/img/rome.jpg" alt="First slide">
+        <div class="carousel-caption d-none d-md-block">
+            <h1>Roma</h1>
+          </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="asset/img/towns-netherlands-amsterdam-rivers-evening.jpg" alt="Second slide">
+        <div class="carousel-caption d-none d-md-block">
+            <h1>Amsterdam</h1>
+          </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="asset/img/paris-francia-2011-4027.jpg" alt="Third slide">
+        <div class="carousel-caption d-none d-md-block">
+            <h1>Paris</h1>
+          </div>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -86,51 +96,61 @@
 
   <!-- Cards de testimonios -->
   <div id="cards">
-    <p id="testimonios" style="font-size:5vw;">Testimonios</p>
+    <p id="testimonios" style="font-size:4vw;">Testimonios</p>
 
     <div class="card-group">
       <div class="card">
         <img class="card-img-top" src="asset/img/turist1.jpg" alt="Card image cap">
         <div class="card-body">
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis purus facilisis, gravida justo non, finibus
-            urna. Nullam vel orci sit amet odio aliquet laoreet vitae id eros.</p>
+            urna.
+          </p>
         </div>
       </div>
       <div class="card">
         <img class="card-img-top" src="asset/img/turist2.jpg" alt="Card image cap">
         <div class="card-body">
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis purus facilisis, gravida justo non, finibus
-            urna. Nullam vel orci sit amet odio aliquet laoreet vitae id eros.</p>
+            urna.
+          </p>
         </div>
       </div>
       <div class="card">
         <img class="card-img-top" src="asset/img/turist3.jpg" alt="Card image cap">
         <div class="card-body">
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis purus facilisis, gravida justo non, finibus
-            urna. Nullam vel orci sit amet odio aliquet laoreet vitae id eros.</p>
+            urna.
+          </p>
         </div>
       </div>
     </div>
   </div>
-
   <!-- Contactanos -->
   <form>
-    <div class="form-group">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-    </div>
-    <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-    </div>
-    <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+    <section id="contacto">
 
+      <p id="contactanos" style="font-size:4vw;">Contáctanos</p>
+
+      <div class="form-group">
+        <label for="exampleInputEmail1">Email address:</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password:</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Remember me</label>
+      </div>
+      <button type="button" class="btn btn-light">Submit</button>
+  </form>
+  </section>
+  <div class="iconos">
+    <i class="fab fa-twitter"></i>
+    <i class="fab fa-facebook-square"></i>
+    <i class="fab fa-instagram"></i>
+  </div>
 
   <!-- links de bootstrap -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
